...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/content_description_image_story"
            android:scaleType="fitXY"
            android:transitionName="photo"
            app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/tv_story_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
...
