...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/content_description_image_upload"
            app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalMiddle"
...
